fix(annotation): view was jumping when pointer position was shown

--- a/frontend/src/features/Annotator/Pointer/styles.module.scss
+++ b/frontend/src/features/Annotator/Pointer/styles.module.scss
@@ -1,4 +1,8 @@
 .pointerInfo {
   display: grid;
   justify-items: center;
+
+  &.hidden {
+    opacity: 0;
+  }
 }
